[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="Portal" parent="." instance=ExtResource( 2 )]

[node name="Ship" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.375, 0.375 )

[node name="PortalMarker" type="Position2D" parent="."]

[node name="MainCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[connection signal="ship_jump" from="Portal" to="." method="_on_ship_jump"]
